--- a/Covariate Shift.ipynb
+++ b/Covariate Shift.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "id": "350cf0d2-13aa-4f9c-b4b9-389460865eaf",
    "metadata": {},
    "outputs": [],
@@ -62,37 +62,38 @@
     "def Model_X(z, v):\n",
     "    return z @ u + np.random.normal(0, 1, 1)\n",
     "\n",
-    "def T_statistic(y, x, z, v = 0):\n",
+    "def T_statistic(y, x, z, v, reg):\n",
     "    d_y = reg.predict(z.reshape(1,20))\n",
     "    d_x = z @ u\n",
     "    return np.abs((y-d_y)*(x-d_x))\n",
+    "    # return (y - z.sum()- x)**2\n",
     "\n",
-    "def Conterfeits(y, x, z, v = 0, L = 5, K = 10):\n",
+    "def Conterfeits(y, x, z, v, L, K, reg):\n",
     "    M = L * K - 1\n",
     "    cnt = 0\n",
-    "    t_stat = T_statistic(y, x, z, v)\n",
+    "    t_stat = T_statistic(y, x, z, v, reg)\n",
     "    \n",
     "    for i in range(M):\n",
     "        x_ = Model_X(z, v)\n",
-    "        if t_stat > T_statistic(y, x_, z, v):\n",
+    "        if t_stat > T_statistic(y, x_, z, v, reg):\n",
     "            cnt=cnt+1\n",
     "            \n",
     "    return cnt // K\n",
     "\n",
-    "def PCRtest(Y, X, Z, V = 0, L = 5, K = 20, covariate_shift = True):\n",
+    "def PCRtest(Y, X, Z, V, L, K, covariate_shift, density_ratio, reg):\n",
     "    n = Y.size\n",
     "    W = np.array([0.0]*L)\n",
     "\n",
     "    for j in range(n):\n",
     "        y, x, z, v = Y[j], X[j], Z[j], V[j]\n",
     "        if covariate_shift == True:\n",
-    "            ind = Conterfeits(y, x, z, v, L, K)\n",
-    "            W[ind] += sample_density_ratio[j]\n",
+    "            ind = Conterfeits(y, x, z, v, L, K, reg)\n",
+    "            W[ind] += density_ratio[j]\n",
     "        if covariate_shift == False:\n",
-    "            W[Conterfeits(y, x, z, v, L, K)] += 1     \n",
+    "            W[Conterfeits(y, x, z, v, L, K, reg)] += 1     \n",
     "    return W, L/n * np.dot(W - n/L, W - n/L)\n",
     "\n",
-    "def generate_cov_matrix(Y, X, Z, V = 0, L = 5, K = 20):\n",
+    "def generate_cov_matrix(Y, X, Z, V, L, K, density_ratio, reg):\n",
     "    \"\"\"\n",
     "    Generate a covariance matrix for quadratic form normal rv.\n",
     "\n",
@@ -107,7 +108,7 @@
     "    \n",
     "    for j in range(n):\n",
     "        y, x, z, v = Y[j], X[j], Z[j], V[j]\n",
-    "        diag[Conterfeits(y, x, z, v, L, K)] += (sample_density_ratio[j]**2)\n",
+    "        diag[Conterfeits(y, x, z, v, L, K, reg)] += (density_ratio[j]**2)\n",
     "    diag = L*(diag/n)- 1/L\n",
     "    covariance_matrix = np.full((L, L), -1/L)  # Fill all entries with 1/L\n",
     "    np.fill_diagonal(covariance_matrix, diag)  # Set diagonal entries to 1 - 1/L^2\n",
@@ -172,12 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "b71bf1c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n, p = 1000, 20\n",
+    "n, p = 100, 20\n",
     "s = np.random.normal(0, 1, p)\n",
     "t = s + np.random.normal(0, 0.1, p)\n",
     "u = np.random.normal(0, 1, p)"
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 161,
    "id": "8a429fec",
    "metadata": {},
    "outputs": [],
@@ -197,30 +198,20 @@
     "    V_source, V_target = 0, 0\n",
     "    for i in range(n):\n",
     "        Z_source[i] = np.random.normal(0, 1, p)\n",
-    "        Z_target[i] = np.random.normal(0.1, 1, p)\n",
+    "        Z_target[i] = np.random.normal(2, 1, p)\n",
     "        \n",
     "    X_source = Z_source @ u + np.random.normal(0, 1, n)\n",
     "    X_target = Z_target @ u + np.random.normal(0, 1, n)\n",
-    "    \n",
-    "    V_source = Z_source @ s + X_source + np.random.normal(0, 1, n)\n",
-    "    V_target = Z_target @ t - X_target + np.random.normal(0, 1, n)\n",
+    "\n",
+    "    V_source = Z_source @ s - X_source + np.random.normal(0, 1, n)\n",
+    "    V_target = Z_target @ t + X_target + np.random.normal(0, 1, n)\n",
     "    \n",
     "    Y_source, Y_target = np.zeros(n), np.zeros(n)\n",
     "    for i in range(n):\n",
-    "        Y_source[i] = np.sin(Z_source[i].sum() + X_source[i] + V_source[i]) + np.random.normal(0, 1, 1) + Alpha * X_source[i]\n",
-    "        Y_target[i] = np.sin(Z_target[i].sum() + X_target[i] + V_target[i]) + np.random.normal(0, 1, 1) + Alpha * X_target[i]\n",
+    "        Y_source[i] = Z_source[i].sum() + X_source[i] + V_source[i] + np.random.normal(0, 1, 1) + Alpha * X_source[i]\n",
+    "        Y_target[i] = Z_target[i].sum() + X_target[i] + V_target[i] + np.random.normal(0, 1, 1) + Alpha * X_target[i]\n",
     "    return Y_source.reshape(-1,1), X_source.reshape(-1,1), V_source.reshape(-1,1), Z_source,\\\n",
     "           Y_target.reshape(-1,1), X_target.reshape(-1,1), V_target.reshape(-1,1), Z_target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "id": "0083f3ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_source, X_source, V_source, Z_source, Y_target, X_target, V_target, Z_target = generate(n, p, s, t, u, 0)"
    ]
   },
   {
@@ -233,12 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 162,
    "id": "b0fdf7e8-fcae-499a-8149-c328d32c395f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = 20\n",
+    "K = 30\n",
     "L = 10\n",
     "n, p = 1000, 20\n",
     "s = np.random.normal(0, 1, p)\n",
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 163,
    "id": "4c288a9c-deba-4953-8c5b-1a97f4a70d34",
    "metadata": {
     "collapsed": true,
@@ -303,7 +294,7 @@
       "sigma = 0.10000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 0.10000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 0.10000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 1.00000, lambda = 0.00100, score = -0.00021\n",
+      "sigma = 1.00000, lambda = 0.00100, score = -0.00020\n",
       "sigma = 1.00000, lambda = 0.01000, score = -0.00002\n",
       "sigma = 1.00000, lambda = 0.10000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 1.00000, score = -0.00000\n",
@@ -316,39 +307,39 @@
       "sigma = 1.00000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 10.00000, lambda = 0.00100, score = 3192.57192\n",
-      "sigma = 10.00000, lambda = 0.01000, score = 224.48716\n",
-      "sigma = 10.00000, lambda = 0.10000, score = 9.98097\n",
-      "sigma = 10.00000, lambda = 1.00000, score = -0.67264\n",
-      "sigma = 10.00000, lambda = 10.00000, score = -0.43013\n",
-      "sigma = 10.00000, lambda = 100.00000, score = -0.16197\n",
-      "sigma = 10.00000, lambda = 1000.00000, score = -0.02168\n",
-      "sigma = 10.00000, lambda = 10000.00000, score = -0.00224\n",
-      "sigma = 10.00000, lambda = 100000.00000, score = -0.00022\n",
-      "sigma = 10.00000, lambda = 1000000.00000, score = -0.00002\n",
+      "sigma = 10.00000, lambda = 0.00100, score = 47960.15100\n",
+      "sigma = 10.00000, lambda = 0.01000, score = 1822.30554\n",
+      "sigma = 10.00000, lambda = 0.10000, score = 18.71835\n",
+      "sigma = 10.00000, lambda = 1.00000, score = -1.30559\n",
+      "sigma = 10.00000, lambda = 10.00000, score = -0.84087\n",
+      "sigma = 10.00000, lambda = 100.00000, score = -0.22798\n",
+      "sigma = 10.00000, lambda = 1000.00000, score = -0.02708\n",
+      "sigma = 10.00000, lambda = 10000.00000, score = -0.00276\n",
+      "sigma = 10.00000, lambda = 100000.00000, score = -0.00028\n",
+      "sigma = 10.00000, lambda = 1000000.00000, score = -0.00003\n",
       "sigma = 10.00000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 10.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 10.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 100.00000, lambda = 0.00100, score = 217.50064\n",
-      "sigma = 100.00000, lambda = 0.01000, score = 7.74568\n",
-      "sigma = 100.00000, lambda = 0.10000, score = -0.48522\n",
-      "sigma = 100.00000, lambda = 1.00000, score = -0.49858\n",
-      "sigma = 100.00000, lambda = 10.00000, score = -0.49412\n",
-      "sigma = 100.00000, lambda = 100.00000, score = -0.37105\n",
-      "sigma = 100.00000, lambda = 1000.00000, score = -0.08491\n",
-      "sigma = 100.00000, lambda = 10000.00000, score = -0.00962\n",
-      "sigma = 100.00000, lambda = 100000.00000, score = -0.00097\n",
+      "sigma = 100.00000, lambda = 0.00100, score = 955.48771\n",
+      "sigma = 100.00000, lambda = 0.01000, score = 15.12847\n",
+      "sigma = 100.00000, lambda = 0.10000, score = -0.47410\n",
+      "sigma = 100.00000, lambda = 1.00000, score = -0.50287\n",
+      "sigma = 100.00000, lambda = 10.00000, score = -0.49828\n",
+      "sigma = 100.00000, lambda = 100.00000, score = -0.37392\n",
+      "sigma = 100.00000, lambda = 1000.00000, score = -0.08548\n",
+      "sigma = 100.00000, lambda = 10000.00000, score = -0.00968\n",
+      "sigma = 100.00000, lambda = 100000.00000, score = -0.00098\n",
       "sigma = 100.00000, lambda = 1000000.00000, score = -0.00010\n",
       "sigma = 100.00000, lambda = 10000000.00000, score = -0.00001\n",
       "sigma = 100.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 100.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 1000.00000, lambda = 0.00100, score = -0.47907\n",
-      "sigma = 1000.00000, lambda = 0.01000, score = -0.49999\n",
-      "sigma = 1000.00000, lambda = 0.10000, score = -0.49998\n",
-      "sigma = 1000.00000, lambda = 1.00000, score = -0.49992\n",
-      "sigma = 1000.00000, lambda = 10.00000, score = -0.49578\n",
-      "sigma = 1000.00000, lambda = 100.00000, score = -0.37484\n",
-      "sigma = 1000.00000, lambda = 1000.00000, score = -0.08675\n",
+      "sigma = 1000.00000, lambda = 0.00100, score = -0.46334\n",
+      "sigma = 1000.00000, lambda = 0.01000, score = -0.50003\n",
+      "sigma = 1000.00000, lambda = 0.10000, score = -0.50002\n",
+      "sigma = 1000.00000, lambda = 1.00000, score = -0.49997\n",
+      "sigma = 1000.00000, lambda = 10.00000, score = -0.49582\n",
+      "sigma = 1000.00000, lambda = 100.00000, score = -0.37487\n",
+      "sigma = 1000.00000, lambda = 1000.00000, score = -0.08676\n",
       "sigma = 1000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 1000.00000, lambda = 100000.00000, score = -0.00100\n",
       "sigma = 1000.00000, lambda = 1000000.00000, score = -0.00010\n",
@@ -435,8 +426,8 @@
       "sigma = 1000000000.00000, lambda = 1000000000.00000, score = -0.00000\n",
       "Found optimal sigma = 10.000, lambda = 1.000.\n",
       "Optimizing theta...\n",
-      "Approximate alpha-relative PE-divergence = 0.18\n",
-      "Approximate alpha-relative KL-divergence = 0.21\n",
+      "Approximate alpha-relative PE-divergence = 0.81\n",
+      "Approximate alpha-relative KL-divergence = 0.89\n",
       "RuLSIF completed.\n"
      ]
     },
@@ -467,56 +458,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8cd63a2b-11a5-40cc-b475-832ce68d5cf8",
+   "execution_count": 164,
+   "id": "986d6200-ccdf-4e3d-82bd-cd974d748e81",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.016430710130682424\n",
-      "0.518106081181934\n"
+      "2.3694437717232137\n",
+      "0.30300551623361993\n",
+      "1.5061475866848595\n"
      ]
     }
    ],
    "source": [
-    "# verification of the data assumption with the ordinary PCR test\n",
-    "\n",
-    "print(chi_squared_p_value(PCRtest(Y_target, X_target, Z_target,V_target, L = 10, K = 30, covariate_shift = False)[1],L-1))\n",
-    "print(chi_squared_p_value(PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 30, covariate_shift = False)[1],L-1))"
+    "print(max(sample_density_ratio))\n",
+    "print(min(sample_density_ratio))\n",
+    "mean = np.mean(sample_density_ratio)\n",
+    "print(mean)\n",
+    "sample_density_ratio = sample_density_ratio/mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 165,
+   "id": "a8fd1d27-d17f-4b4c-b796-01fa04b5d17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([178., 200., 182., 228., 212.]), 8.68)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PCRtest(Y_target, X_target, Z_target,V_target, L = 5, K = 30, covariate_shift = False, density_ratio = sample_density_ratio, reg = reg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "74b8da18-cce3-4f6e-ae61-5f0a52a6f858",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([215., 219., 188., 195., 183.]), 5.22)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PCRtest(Y_source, X_source, Z_source,V_source, L = 5, K = 30, covariate_shift = False, density_ratio = sample_density_ratio, reg = reg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d14625ee-5880-4f8f-9eb2-61e01603f239",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.573496971081113e-13"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi_squared_p_value(65, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c8fd609a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0.61383\n",
-      "0.32126999999999994\n",
-      "0.78939\n",
-      "0.76336\n",
-      "0.27823\n",
-      "0.5292399999999999\n",
-      "0.17881000000000002\n",
-      "0.06591999999999998\n",
-      "0.5493600000000001\n",
-      "0.49693\n"
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
     "# verification by the p value\n",
-    "for j in range(10):\n",
-    "    cov1 = generate_cov_matrix(Y_source, X_source, Z_source,V_source, L = 10, K = 20)\n",
-    "    print(monte_carlo_p_value(100000, cov1, 10, PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = True)[1]))\n"
+    "count = 0\n",
+    "for j in trange(100):\n",
+    "    \n",
+    "    cov1 = generate_cov_matrix(Y_source, X_source, Z_source,V_source, L = 20, K =30, density_ratio = sample_density_ratio, reg = reg)\n",
+    "    w, statistic = PCRtest(Y_source, X_source, Z_source,V_source, L = 20, K = 30, covariate_shift = True, density_ratio = sample_density_ratio, reg = reg)\n",
+    "    print(statistic)\n",
+    "    p_value = monte_carlo_p_value(100000, cov1, 20, statistic)\n",
+    "    print(p_value)\n",
+    "    if p_value < 0.1:\n",
+    "        count += 1\n",
+    "probability = count/100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "a8d2fdc6-9afb-4921-99d2-8a050a42bc83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([42.97221836, 41.13751691, 62.58925636, 58.42852195, 49.19229459,\n",
+       "       58.71867837, 57.38112057, 51.79035496, 51.23925774, 63.06646426,\n",
+       "       57.83586488, 39.78639711, 50.70822744, 35.20637234, 47.84120816,\n",
+       "       52.98122953, 55.47235177, 73.71218198, 49.14257705, 62.86486911])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
    ]
   },
   {
